--- a/templates/todos.html
+++ b/templates/todos.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Build.a.Blog</h1>
+    <h1>Build a Blog</h1>
     <form method='post'>
         <label>
             New Task:
