--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,20 @@
 <!doctype html>
 <html>
     <head>
-        <title>{{title}}</title>
+        <title>My Blog</title>
     </head>
-<body>
+<body>  
+    <head>
+        <title>Build A Blog</title>
+    </head>
+    <nav>
+        <a href="/Main blog page.html/">Main Page</a>
+        <a href="/addblog">add a blog</a>
+    </nav>
 
+    
     {% block content %}
-    {%endblock%}
+    {% endblock %}
     
 </body>
 </html>
