--- a/templates/base.html
+++ b/templates/base.html
@@ -6,10 +6,17 @@
 <body>  
     <head>
         <title>Build A Blog</title>
+        
+        <!-- style link -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+
+        
+
     </head>
     <nav>
-        <a href="/Main blog page.html/">Main Page</a>
-        <a href="/addblog">add a blog</a>
+        <a href="/index">Home</a>
+        <a href="/blogs">Blogs</a>
+        <a href="/posts">Post a Blog</a>
     </nav>
 
     
