--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,22 @@
 
 {% block content %}
 
-<h1>Build a Blog home page</h1>
+
+
+<div class="row">
+        <div class="col">
+        </div>
+        <div class="col">
+            <br>
+            <br>
+            <h1>Build a Blog</h1>
+            <h2>Home Page</h2>
+            <br>
+            <br>
+            
+        </div>
+        <div class="col">
+        </div>
+    </div>
 
 {% endblock %}
