--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,11 @@
         <a href="/blogs">Blogs</a>
         <a href="/posts">Post a Blog</a>
     </nav>
+    <div class="col" align="right">
+            <a href="/login.html">Login</a>
+
+            <a href="/logout.html">Logout</a>
+    </div>
 
     {% with messages = get_flashed_messages(with_categories=true) %}
     {% if messages %}
