--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,11 @@
             <h2>Home Page</h2>
             <br>
             <br>
- 
+            <ul>
+            {% for user in users %}
+            <li><a href="/blog{{  user.username  }}">{{ user.username }}</a></li>
+            {% endfor %}
+            </ul>
         </div>
 
     </div>
