--- a/templates/base.html
+++ b/templates/base.html
@@ -19,9 +19,9 @@
         <a href="/posts">Post a Blog</a>
     </nav>
     <div class="col" align="right">
-            <a href="/login.html">Login</a>
+            <a href="/login">Login</a>
 
-            <a href="/logout.html">Logout</a>
+            <a href="/logout">Logout</a>
     </div>
 
     {% with messages = get_flashed_messages(with_categories=true) %}
