--- a/templates/login.html
+++ b/templates/login.html
@@ -24,7 +24,7 @@
                       </form>
                       <br>
                       <br>
-                      <a href="/signup.html">Signup</a>
+                      <a href="/signup">Signup</a>
         </div>
     
         <div class="col">
