--- a/templates/signup.html
+++ b/templates/signup.html
@@ -47,15 +47,9 @@
                         <span class="error">{{verify_error}}</span>
                     </td>
                 <tr>
-                    <td>
-                        <label for="email">Email (optional)</label>
-                    </td>
-                    <td>
-                        <input type="text" name="email" value="{{email}}"/>
-                        <span class="error">{{email_error}}</span>
-                    </td>
                 </tr>
             </tbody>
         </table> 
         <input type="submit" value="Submit Query"/>
     </form>
+    {% endblock %}
