--- a/templates/usersignupwelcome.html
+++ b/templates/usersignupwelcome.html
@@ -9,5 +9,6 @@
     </head>
     <body>
         <h2 align="left">Welcome, {{username}} you are now registered!</h2>
+        <a href="/posts">Post a Blog</a>
     </body>
 </html>
