--- a/templates/index.html
+++ b/templates/index.html
@@ -14,13 +14,9 @@
             <h2>Home Page</h2>
             <br>
             <br>
-            <ul>
-            {% for user in users %}
-            <li><a href="/blog{{  user.username  }}">{{ user.username }}</a></li>
-            {% endfor %}
-            </ul>
         </div>
-
+        <div class="col">
+        </div>
     </div>
 
 {% endblock %}
