--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,4 @@
 {% extends "base.html" %}
-
-
 {% block content %}
 
 
@@ -10,21 +8,25 @@
         </div>
     
         <div>
-                <form>
-                        <div class="form-group">
-                          <label for="username">Username</label>
-                          <input type="text" class="form-control" id="username" placeholder="username">
+          <br>
+          <br>
+          <h1>Please login</h1>
+          <br>
+          <br>
+                <form name="login" method="POST">
+                  <input type="hidden">
+                  <div class="form-group">
+                          <label for="exampleFormControlInput1">{{error}}</label>
+                          <input type="text" name="username" class="form-control" id="exampleFormControlInput1" placeholder="username">
                           
                         </div>
                         <div class="form-group">
-                          <label for="Password">Password</label>
-                          <input type="password" class="form-control" id="Password" placeholder="Password">
-                        </div>
-                        <button type="submit" class="btn btn-primary">Submit</button>
+                          <input type="password" name="password" class="form-control" id="exampleFormControlInput1" placeholder="Password">
+                        </div> 
+                        <button type="submit" class="btn btn-primary" value="Sign in">Sign in</button>
                       </form>
                       <br>
                       <br>
-                      <a href="/signup">Signup</a>
         </div>
     
         <div class="col">
