--- a/templates/posts.html
+++ b/templates/posts.html
@@ -1,21 +1,22 @@
 
-{% extends "base.html" %} {% block content%}
+{% extends "base.html" %} 
+{% block content%}
 
     <div class="row">
-    <div class="col">
-    </div>
-    <div class="col">
-        <br>
-        <br>
-        <h1>This is my Post Page</h1>
-        <br>
-        <br>
-        <form name="posts" method="post">
-                <input type="hidden">
-            <div class="form-group">
-                <label for="exampleFormControlInput1">Blog</label>
-                <input type="text" name="title" class="form-control" id="exampleFormControlInput1" placeholder="Title">
-            </div>
+        <div class="col">
+        </div>
+        <div class="col">
+            <br>
+            <br>
+            <h1>This is my Post Page</h1>
+            <br>
+            <br>
+            <form name="posts" method="post">
+                    <input type="hidden">
+                <div class="form-group">
+                    <label for="exampleFormControlInput1">Blog</label>
+                    <input type="text" name="title" class="form-control" id="exampleFormControlInput1" placeholder="Title">
+                </div>
 
             <div class="form-group">
                 <textarea name="body" class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Whats on your mind?"></textarea>
@@ -23,8 +24,7 @@
             </div>
             <input class="btn btn-primary" type="submit" value="Post">
         </form>
-
-        <p class='user'>Posted by: <a href="/blog?userid={{user_id}}">{{  user  }}</a></p>
+        <p class='username'>Posted by: <a href="/blog?userid={{user_id}}">{{ username  }}</a></p>
     </div>
     <div class="col">
     </div>
