--- a/templates/index.html
+++ b/templates/index.html
@@ -6,14 +6,21 @@
 
 <div class="row">
         <div class="col">
+                       
+
+               
+                <br>
+                <br>
+                {% for user in users %}
+                <p class="users"><a href="/blog?userid={{user.id}}">{{ user.username }}</a></p>
+                {% endfor %}
         </div>
         <div class="col">
             <br>
             <br>
             <h1>Build a Blog</h1>
             <h2>Home Page</h2>
-            <br>
-            <br>
+
         </div>
         <div class="col">
         </div>
