--- a/templates/user.html
+++ b/templates/user.html
@@ -1,18 +1,19 @@
 {% extends "base.html" %}
 
 {% block content %}
-      <div class="single-user wow fadeIn">
+      <div class="individual-user">
 
         <h1>User Posts</h1>
+
 
         <hr>
         {% for entry in entries %}
         <div class="post">
-
-          <a href="/blog?id={{entry.id}}"><h2>{{ entry.title }}</h2></a>
+          <a href="/blog?id={{entry.id}}"><h2>{{ entry.title  }}</h2></a>
           <p class="body-text">{{ entry.body }}</p>
-          <p class="pub-date">Posted on: {{ entry.pub_date }}</p>
           <p class="user">Posted by: <a href="/blog?userid={{entry.owner_id}}">{{ entry.owner.username }}</a></p>
+          
+
 
         </div>
         {% endfor %}
