--- a/templates/blogs.html
+++ b/templates/blogs.html
@@ -10,7 +10,7 @@
         <form action="/individual">
             <tr>
                 <td>
-                    <!-- <label for= "blog_id"><b> {{ blog.title }} </b></label> -->
+                    <label for= "blog_id"><b> {{ blog.title }} </b></label>
                     <input type= "submit"  name= "blog_title" value= "{{ blog.title }}"/>
                 </td>
                 <td> 
