fixed title link

--- a/templates/user.html
+++ b/templates/user.html
@@ -9,7 +9,7 @@
         <hr>
         {% for entry in entries %}
         <div class="post">
-          <a href="/blog?id={{entry.id}}"><h2>{{ entry.title  }}</h2></a>
+          <h2>{{ entry.title  }}</h2></a>
           <p class="body-text">{{ entry.body }}</p>
           <p class="user">Posted by: <a href="/blog?userid={{entry.owner_id}}">{{ entry.owner.username }}</a></p>
           
