--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
             <li>
         
                 <a href="/index">Home</a>
-                <a href="/blogs">All Blogs</a>
+                <a href="/blog">All Blogs</a>
                 <a href="/posts">Post a Blog</a>
                 <a href="/signup">Signup</a>
             </li>
