--- a/templates/blog.html
+++ b/templates/blog.html
@@ -26,7 +26,7 @@
           {% for post in posts %}
           <div class="post">
 
-            <a href="/blog?id={{post.id}}"><p><h2>{{ post.title }}</h2></p></a>
+            <h2>{{ post.title }}</h2></p></a>
             <p class="body-text">{{ post.body }}</p>
             <p class="user">Posted by: <a href="/blog?userid={{post.owner_id}}">{{ post.owner.username }}</a></p>
 
